@@ -93,5 +93,6 @@ void reset_timeout (request_rec *);
 
 void sync_scoreboard_image ();
 int update_child_status (int child_num, int status, request_rec *r);
+void time_process_request (int child_num, int status);
 unsigned int set_callback_and_alarm(void (*fn)(int), int x);
 int check_alarm();
